@@ -1,4 +1,7 @@
 2009-06-20
+- remove flickering on systray
+
+2009-06-20
 - 'urgent_nb_of_blink' allow to choose the number of blink
 
 2009-06-19
